--- a/src/main/resources/assets/pcu_mod/lang/en_us.json
+++ b/src/main/resources/assets/pcu_mod/lang/en_us.json
@@ -6,6 +6,8 @@
   "item.pcu_mod.ytterbium_ingot": "Ytterbium Ingot",
   "item.pcu_mod.lutecium_ingot": "Lutecium Ingot",
   "item.pcu_mod.scandium_ingot": "Scandium Ingot",
+  "block.pcu_mod.barrium_ore": "Barrium Ore",
+  "block.pcu_mod.terbium_ore": "Terbium Ore",
 
 
   "creativetab.pcu_tab": "PCU Tab"
