--- a/src/main/resources/assets/pcu_mod/lang/en_us.json
+++ b/src/main/resources/assets/pcu_mod/lang/en_us.json
@@ -9,6 +9,7 @@
   "item.pcu_mod.scandium_ingot": "Scandium Ingot",
   "block.pcu_mod.barrium_ore": "Barrium Ore",
   "block.pcu_mod.terbium_ore": "Terbium Ore",
+  "block.pcu_mod.malachite_ore": "Malachite Ore",
 
   "item.pcu_mod.pyrite_ingot": "Pyrite Ingot",
   "item.pcu_mod.cavalite_ingot": "Cavalite Ingot",
