datagen + amadeum et elbalite

--- a/src/main/resources/assets/pcu_mod/lang/en_us.json
+++ b/src/main/resources/assets/pcu_mod/lang/en_us.json
@@ -30,6 +30,9 @@
   "item.pcu_mod.connerite": "Connerite",
   "item.pcu_mod.divinite": "Divinite",
 
+  "item.pcu_mod.amadeum": "Amadeum",
+  "item.pcu_mod.elbalite": "Elbalite",
+
 
 
 
