--- a/src/main/resources/assets/pcu_mod/lang/en_us.json
+++ b/src/main/resources/assets/pcu_mod/lang/en_us.json
@@ -40,6 +40,12 @@
   "item.pcu_mod.el_mariachi_disc": "El Mariachi",
   "item.pcu_mod.el_mariachi_disc.desc": "El Mariachi",
 
+  "painting.pcu_mod.idris.title": "Idris Elba",
+  "painting.pcu_mod.idris.author": "Unknown Author",
+
+  "painting.pcu_mod.jnounex.title": "Jnounex",
+  "painting.pcu_mod.jnounex.author": "Pyrex",
+
 
 
 
