--- a/src/main/resources/assets/pcu_mod/lang/en_us.json
+++ b/src/main/resources/assets/pcu_mod/lang/en_us.json
@@ -35,10 +35,13 @@
 
 
   "item.pcu_mod.pcu_theme_disc": "PCU Theme",
-  "item.pcu_mod.pcu_theme_disc.desc": "PCU Theme",
+  "item.pcu_mod.pcu_theme_disc.desc": "? - PCU Theme",
 
   "item.pcu_mod.el_mariachi_disc": "El Mariachi",
-  "item.pcu_mod.el_mariachi_disc.desc": "El Mariachi",
+  "item.pcu_mod.el_mariachi_disc.desc": "? - El Mariachi",
+
+  "item.pcu_mod.lcp_theme_disc": "Le Crime Parfait",
+  "item.pcu_mod.lcp_theme_disc.desc": "Awaren - Intro",
 
   "painting.pcu_mod.idris.title": "Idris Elba",
   "painting.pcu_mod.idris.author": "Unknown Author",
