sombrero + qlq trucs
- sombrero (equipable, pas de texture/modèle/effet)

- traductions

- un disque

--- a/src/main/resources/assets/pcu_mod/lang/en_us.json
+++ b/src/main/resources/assets/pcu_mod/lang/en_us.json
@@ -1,19 +1,21 @@
 {
+  "block.pcu_mod.barrium_ore": "Barrium Ore",
+  "block.pcu_mod.terbium_ore": "Terbium Ore",
+  "block.pcu_mod.malachite_ore": "Malachite Ore",
+  "block.pcu_mod.neodyme_ore": "Neodyme Ore",
+  "block.pcu_mod.lutecium_ore": "Lutecium Ore",
+
+
+
   "item.pcu_mod.barrium_ingot": "Barrium Ingot",
   "item.pcu_mod.raw_terbium": "Raw Terbium",
   "item.pcu_mod.malachite": "Malachite",
 
   "item.pcu_mod.neodyme_ingot": "Neodyme Ingot",
-  "item.pcu_mod.neodyme_ore": "Neodyme Ore",
   "item.pcu_mod.lutecium_ingot": "Lutecium Ingot",
-  "item.pcu_mod.lutecium_ore": "Lutecium Ore",
-  "block.pcu_mod.barrium_ore": "Barrium Ore",
-  "block.pcu_mod.terbium_ore": "Terbium Ore",
-  "block.pcu_mod.malachite_ore": "Malachite Ore",
 
   "item.pcu_mod.pyrite_ingot": "Pyrite Ingot",
   "item.pcu_mod.cavalite_ingot": "Cavalite Ingot",
-
 
   "item.pcu_mod.negrium_shard": "Negrium Shard",
   "item.pcu_mod.divinite_shard": "Divinite Shard",
@@ -25,6 +27,11 @@
   "item.pcu_mod.elbalite": "Elbalite",
 
 
+
+  "item.pcu_mod.sombrero": "Sombrero",
+
+
+
   "item.pcu_mod.pcu_theme_disc": "PCU Theme",
   "item.pcu_mod.pcu_theme_disc.desc": "? - PCU Theme",
 
@@ -34,14 +41,16 @@
   "item.pcu_mod.lcp_theme_disc": "Le Crime Parfait",
   "item.pcu_mod.lcp_theme_disc.desc": "Awaren - Intro",
 
+  "item.pcu_mod.black_dragon_disc": "Black Dragon",
+  "item.pcu_mod.black_dragon_disc.desc": "MCR - Black Dragon Fighting Society",
+
+
+
   "painting.pcu_mod.idris.title": "Idris Elba",
   "painting.pcu_mod.idris.author": "Unknown Author",
 
   "painting.pcu_mod.jnounex.title": "Jnounex",
   "painting.pcu_mod.jnounex.author": "Pyrex",
-
-
-
 
 
 
