Push pour être sur

--- a/src/main/resources/assets/pcu_mod/lang/en_us.json
+++ b/src/main/resources/assets/pcu_mod/lang/en_us.json
@@ -31,6 +31,9 @@
   "item.pcu_mod.el_mariachi_disc": "El Mariachi",
   "item.pcu_mod.el_mariachi_disc.desc": "? - El Mariachi",
 
+  "item.pcu_mod.black_dragon_disc": "Black Dragon",
+  "item.pcu_mod.black_dragon_disc.desc": "MCR - Black Dragon Fighting Society",
+
   "item.pcu_mod.lcp_theme_disc": "Le Crime Parfait",
   "item.pcu_mod.lcp_theme_disc.desc": "Awaren - Intro",
 
