--- a/src/main/resources/assets/pcu_mod/lang/en_us.json
+++ b/src/main/resources/assets/pcu_mod/lang/en_us.json
@@ -21,6 +21,8 @@
   "item.pcu_mod.amadeum": "Amadeum",
   "item.pcu_mod.elbalite": "Elbalite",
 
+  "item.pcu_mod.sombrero": "Sombrero",
+
 
 
   "item.pcu_mod.pcu_theme_disc": "PCU Theme",
