il bouge et il se BAGARRE

--- a/src/main/resources/assets/pcu_mod/lang/en_us.json
+++ b/src/main/resources/assets/pcu_mod/lang/en_us.json
@@ -31,6 +31,9 @@
   "item.pcu_mod.elbalite": "Elbalite",
   "item.pcu_mod.sombrero": "Sombrero",
 
+  "item.pcu_mod.archibullet": "Archibullet",
+  "item.pcu_mod.archibot_spawn_egg": "Archibot Egg",
+
 
 
   "item.pcu_mod.pcu_theme_disc": "PCU Theme",
