--- a/src/main/resources/assets/pcu_mod/lang/en_us.json
+++ b/src/main/resources/assets/pcu_mod/lang/en_us.json
@@ -36,6 +36,9 @@
   "item.pcu_mod.pcu_theme_disc": "PCU Theme",
   "item.pcu_mod.pcu_theme_disc.desc": "? - PCU Theme",
 
+  "item.pcu_mod.pcu_theme_perso_disc": "PCU Theme Perso",
+  "item.pcu_mod.pcu_theme_perso_disc.desc": "Amber Studio - PCU Theme Perso",
+
   "item.pcu_mod.el_mariachi_disc": "El Mariachi",
   "item.pcu_mod.el_mariachi_disc.desc": "? - El Mariachi",
 
@@ -54,7 +57,8 @@
   "item.pcu_mod.regedit_disc": "Regedit Jingle",
   "item.pcu_mod.regedit_disc.desc": "Amber Studios - Regedit Jingle",
 
-
+  "block.pcu_mod.enclume_alliage": "Aloy Anvil",
+  "block.pcu_mod.fusionneur": "Fuser",
 
   "painting.pcu_mod.idris.title": "Idris Elba",
   "painting.pcu_mod.idris.author": "Unknown Author",
