--- a/src/main/resources/assets/pcu_mod/lang/en_us.json
+++ b/src/main/resources/assets/pcu_mod/lang/en_us.json
@@ -6,7 +6,6 @@
   "block.pcu_mod.neodyme_ore": "Neodyme Ore",
 
   "block.pcu_mod.lutecium_ore": "Lutecium Ore",
-  "block.pcu_mod.enclume_alliage": "Alloy anvil",
 
 
 
@@ -71,5 +70,8 @@
 
 
 
-  "creativetab.pcu_tab": "PCU Tab"
+  "creativetab.pcu_blocks_tab": "PCU Blocks",
+  "creativetab.pcu_items_tab": "PCU Items",
+  "creativetab.pcu_mobs_tab": "PCU Mobs"
+
 }
