--- a/src/main/resources/assets/pcu_mod/lang/en_us.json
+++ b/src/main/resources/assets/pcu_mod/lang/en_us.json
@@ -31,7 +31,8 @@
   "item.pcu_mod.sombrero": "Sombrero",
 
   "item.pcu_mod.archibullet": "Archibullet",
-  "item.pcu_mod.archibot_spawn_egg": "Archibot Egg",
+  "item.pcu_mod.archibot_spawn_egg": "Archibot Spawn Egg",
+  "item.pcu_mod.archisentinel_spawn_egg": "Archisentinel Spawn Egg",
 
 
 
