Idris Elba et Marteau GLPI

--- a/src/main/resources/assets/pcu_mod/lang/en_us.json
+++ b/src/main/resources/assets/pcu_mod/lang/en_us.json
@@ -34,6 +34,7 @@
   "item.pcu_mod.archibullet": "Archibullet",
   "item.pcu_mod.archibot_spawn_egg": "Archibot Egg",
 
+  "item.pcu_mod.idris_elba_sword": "Idris Elba Sword",
 
 
   "item.pcu_mod.pcu_theme_disc": "PCU Theme",
